ds/紧急修复_语法错误.txt
======================================================================
【紧急修复】V8.5.2.4.89.1 语法错误
======================================================================

问题：第10833行 SyntaxError: invalid syntax
原因：old_config字典定义时，某一行缺少逗号

======================================================================
方案1：重新拉取（最简单）
======================================================================

# 1. 放弃本地修改，重新拉取
cd /root/10-23-bot
git reset --hard HEAD
git pull

# 2. 验证语法
python3 -m py_compile ds/deepseek_多币种智能版.py

# 如果没有输出，说明语法正确

# 3. 运行回测
cd ds
MANUAL_BACKTEST=true python3 deepseek_多币种智能版.py backtest-deepseek

======================================================================
方案2：手动修复（如果方案1失败）
======================================================================

# 1. 编辑文件
cd /root/10-23-bot/ds
vi deepseek_多币种智能版.py

# 2. 跳转到第10816行
:10816

# 3. 找到这段代码（应该在10816-10821行）：
old_config = {
    'global': copy.deepcopy(config.get('global', {})),
    'per_symbol': copy.deepcopy(config.get('per_symbol', {})),
    'scalping_params': copy.deepcopy(config.get('scalping_params', {})),
    'swing_params': copy.deepcopy(config.get('swing_params', {}))
}

# 4. 确保每一行末尾都有逗号（除了最后一行的}前）

# 正确的格式（注意每行末尾的逗号）：
old_config = {
    'global': copy.deepcopy(config.get('global', {})),      ← 有逗号
    'per_symbol': copy.deepcopy(config.get('per_symbol', {})),   ← 有逗号
    'scalping_params': copy.deepcopy(config.get('scalping_params', {})),  ← 有逗号
    'swing_params': copy.deepcopy(config.get('swing_params', {}))   ← 有逗号
}

# 5. 保存退出
:wq

# 6. 对qwen版本做同样的修改
vi qwen_多币种智能版.py
# 重复步骤2-5

# 7. 验证语法
python3 -m py_compile deepseek_多币种智能版.py
python3 -m py_compile qwen_多币种智能版.py

======================================================================
方案3：使用Python脚本自动修复
======================================================================

# 1. 拉取修复脚本
cd /root/10-23-bot
git pull

# 2. 运行修复脚本
cd ds
python3 fix_syntax_error.py

# 3. 验证
python3 -m py_compile deepseek_多币种智能版.py

======================================================================
验证修复是否成功
======================================================================

# 测试语法
python3 -m py_compile ds/deepseek_多币种智能版.py

# 如果成功，没有任何输出
# 如果失败，会显示SyntaxError

======================================================================
可能的错误原因
======================================================================

1. Git冲突未解决
   - 解决：git reset --hard HEAD && git pull

2. 文件编码问题
   - 解决：确保文件是UTF-8编码

3. 手动编辑错误
   - 解决：使用方案1重新拉取

======================================================================
修复后运行回测
======================================================================

cd /root/10-23-bot/ds
MANUAL_BACKTEST=true python3 deepseek_多币种智能版.py backtest-deepseek

# 如果语法正确，应该能正常启动

======================================================================
如果仍然有问题
======================================================================

请提供：
1. git status 的输出
2. head -n 10825 deepseek_多币种智能版.py | tail -n 10
   （显示第10816-10825行的内容）
3. Python版本: python3 --version

======================================================================
版本: V8.5.2.4.89.1
日期: 2025-11-20
======================================================================

紧急修复：语法错误（第10833行）
======================================================================

问题：
  File "/root/10-23-bot/ds/deepseek_多币种智能版.py", line 10833
    'swing_params': copy.deepcopy(config.get('swing_params', {}))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  SyntaxError: invalid syntax. Perhaps you forgot a comma?

原因：
  可能是git pull时文件冲突，或者之前的修改未完全生效

======================================================================
方案1：强制重置（最简单，推荐）
======================================================================

cd /root/10-23-bot
git fetch origin
git reset --hard origin/main
cd ds

# 验证
python3 -m py_compile deepseek_多币种智能版.py

# 如果成功，运行回测
MANUAL_BACKTEST=true python3 deepseek_多币种智能版.py backtest-deepseek

======================================================================
方案2：手动修复（如果方案1不行）
======================================================================

在服务器上编辑文件：
vi /root/10-23-bot/ds/deepseek_多币种智能版.py

跳转到第10816行：
:10816

应该看到：
            old_config = {
                'global': copy.deepcopy(config.get('global', {})),
                'per_symbol': copy.deepcopy(config.get('per_symbol', {})),
                'scalping_params': copy.deepcopy(config.get('scalping_params', {})),
                'swing_params': copy.deepcopy(config.get('swing_params', {}))
            }

如果第10820行缺少逗号或者有其他问题，确保是这样的：
                'swing_params': copy.deepcopy(config.get('swing_params', {}))
                                ^^^^^^^^^^^^^
                                不要有额外的字符
            }
            ^^^^^ 确保有闭合括号

保存并退出：
:wq

验证：
python3 -m py_compile deepseek_多币种智能版.py

======================================================================
方案3：查看具体错误位置
======================================================================

# 查看第10830-10835行的内容
sed -n '10830,10835p' /root/10-23-bot/ds/deepseek_多币种智能版.py

# 应该输出：
                    'min_indicator_consensus': old_config.get('global', {}).get('min_indicator_consensus', 1),
                    'max_holding_hours': 12
                }
            if 'swing_params' not in old_config:
                old_config['swing_params'] = {
                    'atr_tp_multiplier': old_config.get('global', {}).get('atr_tp_multiplier', 3.0),

# 如果输出不是这样，说明文件损坏，使用方案1重置

======================================================================
方案4：跳过V8.5.2.4.89.1，回退到V8.5.2.4.89
======================================================================

如果以上方案都不行，可以暂时回退：

cd /root/10-23-bot
git log --oneline -5

# 找到V8.5.2.4.89的提交（应该是c161a8e）
git reset --hard c161a8e

cd ds
MANUAL_BACKTEST=true python3 deepseek_多币种智能版.py backtest-deepseek

# 注意：这样会失去V8.5.2.4.89.1的轻量级old_config优化
# 但可以先让回测跑起来

======================================================================
检查点（确认修复成功）
======================================================================

运行以下命令，如果没有输出则表示语法正确：
python3 -m py_compile /root/10-23-bot/ds/deepseek_多币种智能版.py && echo "✅ 语法正确"

如果仍有错误，输出错误信息：
python3 /root/10-23-bot/ds/deepseek_多币种智能版.py 2>&1 | head -20

======================================================================
如果所有方案都失败
======================================================================

请提供以下信息：
1. sed -n '10815,10825p' /root/10-23-bot/ds/deepseek_多币种智能版.py
2. git log --oneline -3
3. git status

然后我们可以手动修复具体的问题

======================================================================

